kube/mariadb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-statefulset
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  serviceName: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      volumes:
        - name: mariadb-db-volume
          persistentVolumeClaim:
            claimName: mariadb-pvc
        - name: mariadb-init
          configMap: 
            name: mariadb-init
      containers:
      - name: mariadb
        image: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mariadb-db-volume
            mountPath: "/var/lib/mysql"
          - name: mariadb-init
            mountPath: "/docker-entrypoint-initdb.d/init.sql"
            subPath: init.sql
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
