kube/statsd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-rest-api-statsd
  labels:
    app: python-rest-api-statsd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-rest-api-statsd
  template:
    metadata:
      labels:
        app: python-rest-api-statsd
    spec:
      containers:
      - name: python-rest-api-statsd
        image: prom/statsd-exporter:latest
        ports:
        - name: http
          containerPort: 9125
        - name: metrics
          containerPort: 9102
        livenessProbe:
          httpGet:
            path: /
            port: metrics
          initialDelaySeconds: 3
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: metrics
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: python-rest-api-statsd
spec:
  selector:
    app: python-rest-api-statsd
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 9125
      targetPort: 9125
    - protocol: TCP
      name: metrics
      port: 9102
      targetPort: 9102
