kube/python-rest-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-rest-api-deployment
  labels:
    app: python-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-rest-api
  template:
    metadata:
      labels:
        app: python-rest-api
    spec:
      containers:
      - name: python-rest-api
        image: toleksa/python-rest-api
        ports:
        - name: http
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 3
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: python-rest-api-service
spec:
  selector:
    app: python-rest-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-rest-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: python-rest-api.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-rest-api-service
            port:
              number: 5000
